# Mail-Client

./: .gitignore  .pre-commit-config.yaml  README.md  app_mailClient.py  imap_client.py  mail_service.py  pyproject.toml  smtp_client.py  validators.py
src/: app_mailClient.py  app_mail_client.py  imap_client.py  mail_service.py  smtp_client.py  validators.py
